--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Bhanuka Dissanayake
 logo: /assets/img/headshot_circle.png
-description: text below image
+description: Software Engineer with more than 3 years of experience in diverse domains in retail, e-commerce, sports, and HRM across tech stacks including C#, .NET core, Python, Django, Java, and AWS with fair knowledge of frontend frameworks like React. Learning and adapting to any technology allows me to stay at the forefront of evolving tech stacks. Skilled in researching, designing, developing, maintaining software, and tackling complex problems. Well-versed in Agile and Kanban methodologies, contributing to efficient project management and successful delivery as a valuable team member. Got valid work rights in Australia. Am eager to advance my career and contribute expertise to craft impactful software.
 #show_downloads: true
 theme: jekyll-theme-minimal
